tests/ui/consts/control-flow/issue-50577.stderr
error[E0308]: mismatched types
  --> $DIR/issue-50577.rs:3:16
   |
LL |         Drop = assert_eq!(1, 1),
   |                ^^^^^^^^^^^^^^^^ expected `isize`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
